# omymodels

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.txt  README.md  SUGGESTIONS.md  build.sh  models.py  one.ddl  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: README.rst  index.html
example/: custom_generator.py  dataclass_defaults.py  dataclass_no_defaults.py  db.sql  extend_builtin_generator.py  gino_orm_models.py  pydantic_with_defaults.py  pydantic_without_defaults.py  sqlalchemy_core.py  sqlalchemy_models.py
omymodels/: __init__.py  cli.py  common.py  converter.py  core.py  errors.py  from_ddl.py  generators.py  helpers.py  logic.py  meta_model.py  openapi.py  plugins.py  templates.py  types.py  utils.py
omymodels/dataclass/: core.py  dataclass.jinja2  templates.py  types.py
omymodels/generation/: __init__.py  base.py  datamodel_base.py  orm_base.py
omymodels/gino/: core.py  gino.jinja2  templates.py  types.py
omymodels/models/dataclass/: core.py  types.py
omymodels/models/enum/: core.py  enum.jinja2  template.jinja2
omymodels/models/gino/: core.py  templates.py  types.py
omymodels/models/openapi3/: __init__.py  core.py
omymodels/models/pydantic/: core.py  templates.py  types.py
omymodels/models/pydantic_v2/: core.py  pydantic_v2.jinja2  templates.py  types.py
omymodels/models/sqlalchemy/: core.py  sqlalchemy.jinja2  templates.py  types.py
omymodels/models/sqlalchemy_core/: core.py  templates.py
omymodels/models/sqlalchemy_v2/: __init__.py  core.py  sqlalchemy_v2.jinja2  templates.py  types.py
omymodels/models/sqlmodel/: core.py  sqlmodel.jinja2  templates.py  types.py
omymodels/omymodels_1/: __init__.py  main.py  providers.py
omymodels/omymodels_1/base/: __init__.py  config.py  contract.py  generator.py  mixins.py  parser.py  provider.py  utils.py
omymodels/omymodels_1/generator/: config.py
omymodels/omymodels_1/providers/generators/omymodels/: main.py
omymodels/omymodels_1/providers/parsers/omymodels/: main.py
omymodels/pydantic/: core.py  templates.py  types.py
omymodels/sqlalchemy/: core.py  sqlalchemy.jinja2  templates.py  types.py
omymodels/sqlalchemy_core/: core.py  sqlalchemy_core.jinja2  templates.py  types.py
omymodels/templates/: core.jinja2
omymodels/types/: __init__.py  converter.py  sql_types.py
tests/: test_dataclasses.py  test_enums.py  test_gino_models.py  test_models_simple.py  test_models_with_index.py  test_omymodels.py  test_pydantic_models.py  test_sqlalchemy.py  test_sqlalchemy_core.py  test_table_args.py
tests/converter/: test_converter.py
tests/functional/converter/: helpers.py  test_converter.py  test_pydal_conversion.py
tests/functional/generator/: _models.py  test_custom_generator.py  test_dataclasses.py  test_enum_only.py  test_enums.py  test_gino_models.py  test_models_with_index.py  test_openapi3.py  test_pydantic_models.py  test_pydantic_v2_models.py  test_sqlalchemy.py  test_sqlalchemy_core.py  test_sqlalchemy_v2.py  test_sqlmodel.py  test_table_args.py
tests/generator/: test_dataclasses.py  test_enums.py  test_pydantic_models.py  test_sqlalchemy.py
tests/integration/converter/: test_pydal_conversion.py
tests/integration/dataclass/: test_dataclass.py
tests/integration/gino/: test_gino.py
tests/integration/openapi3/: test_openapi3.py
tests/integration/pydantic/: conftest.py  test_pydantic.py
tests/integration/pydantic_v2/: conftest.py  module_4270ac50-f414-11f0-9a62-4600b084c254.py  module_4271b852-f414-11f0-9a62-4600b084c254.py  module_65f9c0f8-f414-11f0-bf29-4600b084c254.py  module_65febe00-f414-11f0-bf29-4600b084c254.py  module_6601b894-f414-11f0-bf29-4600b084c254.py  module_74a7171a-f412-11f0-84c2-4600b084c254.py  test_pydantic_v2.py
tests/integration/sqlalchemy/: test_sqlalchemy.py
tests/integration/sqlalchemy_core/: conftest.py  test_sqlalchemy_core.py
tests/integration/sqlalchemy_v2/: test_sqlalchemy_v2.py
tests/integration/sqlmodel/: test_sqlmodel.py
tests/unit/: test_base_generator.py  test_common.py  test_helpers.py  test_omymodels.py  test_plugins.py  test_type_converter.py
tests/v1/unit/: test_providers.py
tests/v1/unit/base/: test_base_provider.py  test_config.py  test_custom_parser.py  test_mixins.py
