[tool.poetry]
name = "omymodels"
version = "0.8.3"
description = "O! My Models (omymodels) is a library to generate Python Models for SQLAlchemy (ORM & Core), GinoORM, Pydantic, Pydal tables & Python Dataclasses from SQL DDL. "
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "docs/README.rst"
homepage = "https://github.com/xnuinside/omymodels"
repository = "https://github.com/xnuinside/omymodels"
classifiers = [
    "Programming Language :: PL/SQL",
    "Programming Language :: SQL",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
simple-ddl-parser = "0.16.0"
Jinja2 = "^3.0.1"
py-models-parser = "^0.5.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
m2r = "^0.2.1"
black = "^20.8b1"
twine = "^3.3.0"

[tool.poetry.scripts]
omm = 'omymodels.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
