[tool.poetry]
name = "omymodels"
version = "0.17.0"
description = "O! My Models (omymodels) is a library to generate Python Models for SQLAlchemy (ORM & Core), SQLModel, GinoORM, Pydantic, Pydal tables & Python Dataclasses from SQL DDL. And convert one models to another."
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "docs/README.rst"
homepage = "https://github.com/xnuinside/omymodels"
repository = "https://github.com/xnuinside/omymodels"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: PL/SQL",
    "Programming Language :: SQL",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
simple-ddl-parser = "^1.7.0"
Jinja2 = "^3.0.1"
py-models-parser = "^0.7.0"
pydantic = "^1.8.2"
table-meta = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
omm = 'omymodels.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
