[tool.poetry]
name = "omymodels"
version = "1.0.0"
description = "O! My Models (omymodels) is a library to generate Python Models for SQLAlchemy (ORM & Core), SQLModel, GinoORM, Pydantic, Pydal tables & Python Dataclasses from SQL DDL. And convert one models to another."
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xnuinside/omymodels"
repository = "https://github.com/xnuinside/omymodels"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: PL/SQL",
    "Programming Language :: SQL",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
simple-ddl-parser = "^1.0.0"
Jinja2 = "^3.0.1"
py-models-parser = "^1.0.0"
pydantic = ">=1.8.2,<3.0.0"
table-meta = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
tox = "^4.0"
sqlalchemy = "^2.0"
# sqlmodel and gino run in isolated tox environments due to dependency conflicts

[tool.poetry.scripts]
omm = 'omymodels.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["omymodels"]
branch = true
omit = [
    "omymodels/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
